...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:layout_margin="8dp"
        android:id="@+id/close_button"
        android:text="@string/go_on"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/NavigationBarButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
...
