...
                android:elevation="8dp"
                android:padding="16dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/coffee_container">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chocolate"
                    style="@style/textViewStyling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:checked="@={viewModel.chocolate}"
...
